--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-{
-	"folders": [
-		{
-			"path": "."
-		}
-	],
-	"settings": {}
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Colaboracion</title>
+	<link href="styles.css" rel="stylesheet">
+</head>
+<body>
+	
+</body>
+</html>
