Agrego menú principal con Ionicons en index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
-	
+	  <!--Menu principal-->
+    <div class="menu">
+        <!--Boton que activa o despliega el menu de redes sociales-->
+        <div class="toogle">
+            <ion-icon name="share-social"></ion-icon> <!--icono de compartir-->
+        </div>
+    </div>
+
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
