--- a/index.html
+++ b/index.html
@@ -13,9 +13,44 @@
         <div class="toogle">
             <ion-icon name="share-social"></ion-icon> <!--icono de compartir-->
         </div>
+
+        <!--Listas de botones de redes sociales animados-->
+        <!--cada  <li> representa una red social con un color y un indice de animación personalizado usando variables css-->
+        <li style="--i:0;--clr:#1877f2"><!--Facebook-->
+            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            </li> 
+        <li style="--i:1;--clr:#25d366"> <!--WhatsApp-->
+            <a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a>
+        </li>
+
+        <li style="--i:2;--clr:#1da1f2"> <!--Reddit-->
+            <a href="#"><ion-icon name="logo-reddit"></ion-icon></a>
+        </li>
+
+        <li style="--i:3;--clr:#ff5733"> <!--Twitter-->
+            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+        </li>
+
+        <li style="--i:4;--clr:#0a66c2"> <!--LinkedIn-->
+            <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+        </li>
+
+        <li style="--i:5;--clr:#c32aa3"> <!--Instagram-->
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        </li>
+
+        <li style="--i:6;--clr:#1b1e21"> <!--GitHub-->
+            <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+        </li>
+
+        <li style="--i:7;--clr:#ff0000"> <!--YouTube-->
+            <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+        </li>
+
     </div>
 
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
