toogle paso a ser toggle   linea 13

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	  <!--Menu principal-->
     <div class="menu">
         <!--Boton que activa o despliega el menu de redes sociales-->
-        <div class="toogle">
+        <div class="toggle">
             <ion-icon name="share-social"></ion-icon> <!--icono de compartir-->
         </div>
 
